fixed buttons being weird on small screens
shoe head shoe head

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ button:not(.difficulty) {
     height: 50px;
 }
 
+button {padding: 0;}
+
 #button-1 {background-color: rgb(255, 120, 100); }
 
 #button-2 {
